# services-redis

./: .gitlab-ci.yml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: redis.py
nagare/services/: redis.py
src/nagare/admin/: redis.py
src/nagare/services/: redis.py
