[metadata]
name = nagare-services-redis
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Redis service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-redis
    Tracker = https://github.com/nagareproject/services-redis/issues

[options]
zip_safe = False
packages = find:
install_requires =
    redis
    nagare-server

[options.entry_points]
nagare.commands =
    redis = nagare.admin.redis:Commands

nagare.commands.redis =
    info = nagare.admin.redis:Info
    clients = nagare.admin.redis:Clients
    config = nagare.admin.redis:Config
    size = nagare.admin.redis:Size
    flush = nagare.admin.redis:Flush

nagare.services =
    redis = nagare.services.redis:Redis

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
